Revision history for Perl extension Term::EditLine.

0.07  Thu Mar 12, 2015
  - integrated back in to Term::EditLine
  - Term::EditLine2 will be deprecated, but not before September
    12, 2015

0.06  Thu Sep 11, 2015
  - forked from Term::EditLine to Term::EditLine2
  - use Alien::Editline to locate editline library

0.05  Sun Jan 25 21:01:33 2004
  - added $el->set_line, not really tested, maybe buggy

0.04  Fri Dec 12 19:22:16 2003
  - added more information to the README file
  - changed the POD documentation

0.03  Sun Jun 15 17:40:01 2003
  - added set_getc_fun; Term::EditLine now supports non blocking I/O
  - Replaced the standard README file

0.01  Tue Jan  7 23:07:26 2003
  - original version; created by h2xs 1.22 with options
		-Ox -n Term::EditLine histedit.h


